fixed the alignment issues in the navbar

--- a/src/App.css
+++ b/src/App.css
@@ -103,3 +103,7 @@
   position: relative;
   left: 40em !important;
 }
+
+.float-left {
+  float:left;
+}
